# shopify-stores-list-scraper

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/cache/: crtsh_myshopify.json
src/hu_shopify_scraper/: cli.py  config.py
src/hu_shopify_scraper/db/: models.py  repository.py
src/hu_shopify_scraper/discovery/: app_reviews.py  ct_logs.py  direct_search.py  google_dork.py  hu_domains.py  hu_registry.py  onshopify_scraper.py  registry_historical.py  sellercenter_scraper.py  tranco.py
src/hu_shopify_scraper/utils/: browser.py  domain.py  http.py
src/hu_shopify_scraper/verify/: fingerprint.py  hungarian.py  metadata.py
tests/: test_ct_logs.py  test_db.py  test_domain_utils.py  test_fingerprint.py  test_hu_registry.py  test_hungarian.py  test_integration.py  test_tranco.py
