[project]
name = "hu-shopify-scraper"
version = "0.1.0"
description = "Scraper for Hungarian Shopify stores"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "rich>=15.0.0",
    "selectolax>=0.4.10",
]

[project.scripts]
hu-shopify = "hu_shopify_scraper.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.18",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
